[package]
name = "quote-api-fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = "0.27.0"
futures = { version = "0.3.30", default-features = false, features = ["std", "async-await", "alloc"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
vind-async = { path = "../../vind-async" }
